@@ -36,6 +36,7 @@ Version 2.7.0
       when the hardware contains multiple subdevices.
     - Add many new attributes to describe device type, and the
       numbers of slices, subslices, execution units and threads.
+    - Expose the memory information as LevelZeroHBM/DDR/MemorySize infos.
 * Tools
   + Add --grey and --palette options to switch lstopo to greyscale or
     white-background-only graphics, or to tune individual colors.
